# street-parking-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config-dahua.json  config-unv.json  config.json  docker-compose.yaml
kafka/: Dockerfile
models/: crnn-lite-sim.param  yolov5-car-plate.param
src/: Config.cpp  Config.h  ILogger.cpp  ILogger.h  IThreadLauncher.h  ITimer.h  RandomStringGenerator.cpp  RandomStringGenerator.h  SharedQueue.h  StreetParking.cpp
src/app/: ANPRService.cpp  ANPRService.h  CalibrationParams.cpp  CalibrationParams.h  CalibrationParamsUpdater.cpp  CalibrationParamsUpdater.h  Constants.h  Detection.cpp  Detection.h  DetectionEngine.cpp  DetectionEngine.h  DetectorYoloV5NCNN.cpp  DetectorYoloV5NCNN.h  LPRecognizer.cpp  LPRecognizer.h  LPRecognizerEngine.cpp  LPRecognizerEngine.h  LPRecognizerExtended.cpp  LPRecognizerExtended.h  LPRecognizerNCNN.cpp  LPRecognizerNCNN.h  LicensePlate.cpp  LicensePlate.h  Slicing.cpp  Slicing.h  TemplateMatching.cpp  TemplateMatching.h  TensorRTDeleter.h  TensorRTEngine.cpp  TensorRTEngine.h  TrtLogger.h  Utils.cpp  Utils.h
src/client/: CameraClientLauncher.cpp  CameraClientLauncher.h  FrameData.cpp  FrameData.h  FrameSnapshotReader.cpp  FrameSnapshotReader.h  GstreamerReader.cpp  GstreamerReader.h
src/package_sending/: Package.cpp  Package.h  PackageKafkaProducer.cpp  PackageKafkaProducer.h  PackageSender.cpp  PackageSender.h
